[10-182] Pet Clinic - JUnit 5 setup